update 10 - added wireframe for dictionary page

--- a/public/css/learn.css
+++ b/public/css/learn.css
@@ -72,7 +72,9 @@ gap: 17px;
 .list-group-item{
   cursor: pointer;
 }
-
+.drop30{
+margin-bottom: 30px;
+}
 
 /* items that i have to change once card is clicked */
 /* .imageUploadDiv, .deleteBtnDiv{
