--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -6,7 +6,7 @@
         <h1 class="text-center mb-4">Follow the alphabet learning path by uploading an image of you signing a letter for
           each step down the path.</h1>
         <hr>
-        <h3 class="text-center">Letters in American Sign Language:</h3>
+        <h3 class="text-center drop30">Letters in American Sign Language:</h3>
         <div class="image-container">
           <%console.log("jump", {selectedLetter})%>
             <% for(let i=0; i < arrLetters.length; i++){%>
