--- a/views/partials/liveTranslationHeader.ejs
+++ b/views/partials/liveTranslationHeader.ejs
@@ -42,6 +42,9 @@
             <li class="nav-item">
               <a class="nav-link liveLink" href="/liveTranslation">Live Translation</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/dictionary">ASL Dictionary</a>
+            </li>
             <li>
               <div class="dropdown">
                 <span class="nav-link liveLink dropdown-toggle" id="profile-btn" href="">Profile</span>
