--- a/views/partials/profileHeader.ejs
+++ b/views/partials/profileHeader.ejs
@@ -14,7 +14,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
   <link rel="stylesheet" href="/css/study.css" />
-
+  <link rel="stylesheet" href="css/dictionary.css" />
   <link rel="stylesheet" href="/css/profile.css" />
 </head>
 
@@ -43,6 +43,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link liveLink" href="/liveTranslation">Live Translation</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/dictionary">ASL Dictionary</a>
             </li>
             <li>
               <div class="dropdown">
