--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,30 @@
-<%- include('partials/profileHeader') -%>
+<%- include('partials/aboutHeader') -%>
+  <div class="about-container">
+    <div class="aboutUs">
+      <h2> About Us</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eveniet sint ex ratione laborum dicta ipsa
+        adipisci eaque minima accusantium cupiditate illum nisi veniam natus dolores, hic quidem nulla cum, est numquam
+        nobis minus? Enim molestias minus dolor suscipit dolorem pariatur similique iste, reiciendis, quia vitae quo
+        blanditiis tempora ab!
+      </p>
+    </div>
+    <div class="contact">
+      <ul>
+        <li>
+          <a href=""><i class="fa-solid fa-map-pin" style="color: #908fea;"></i> 5201 Hector Lumbard Avenue</a>
+        </li>
+        <li>
+          <a href=""><i class="fa-solid fa-phone"></i> 978-744-9670</a>
+        </li>
+        <li>
+          <a href=""><i class="fa-solid fa-inbox"></i> contact@asl-lingo.com</a>
+        </li>
+        <!-- <li>
+          <img src="/imgs/headerImg.jpg" alt="no work">
+        </li> -->
+      </ul>
+    </div>
 
-  <h1>Under Construction</h1>
-
-  <img src="/imgs/charlie.jpeg" alt="😟">
-  <%- include('partials/profileFooter') -%>
+  </div>
+  <%- include('partials/aboutFooter') -%>
