--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -3,12 +3,24 @@
 #profile-btn{
   cursor: pointer;
 }
+/* html */
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
 /* Footer */
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
 .layout-container{
   margin: 0 auto;
-  max-width: 1140px;
+  /* max-width: 1140px; */
   min-height: 70px;
   text-align: center;
+  background-color: #f8f9fa!important;
+    opacity: 83%;
 }
 .footer-header{
   display: flex;
@@ -22,6 +34,24 @@
 .footer-header a{
   width: 125px;
   background-color: rgb(88,204,2)
+}
+.footer-links{
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 15px;
+}
+/* .copyright{
+  margin-top: 15px;
+  padding-bottom: 15px;
+} */
+.container{
+  /* background-image: url("/imgs/header-image.jpg"); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* width: 100% !important; */
+}
+.bg-light{
+  opacity: 83%;
 }
 /* Automatic scrolling styling */
 /* .container {
@@ -53,56 +83,3 @@
   }
 } */
 
-.container {
-  width: 100%;
-  overflow: hidden;
-}
-
-.horizontal-scroll {
-  display: flex;
-  overflow-x: scroll;
-  scroll-behavior: smooth;
-}
-
-.image-container {
-  display: flex;
-  /* Adjust the width to accommodate all the images */
-  width: fit-content;
-}
-
-.horizontal-scroll img {
-  flex: 0 0 auto;
-  padding-right: 10px;
-  cursor: pointer;
-}
-
-@keyframes scrollImages {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    /* Adjust the translation value based on the width of the image container */
-    transform: translateX(-100%);
-  }
-}
-
-.horizontal-scroll {
-  /* Add animation properties */
-  animation: scrollImages 20s linear infinite;
-  animation-delay: 2s;
-  margin-top: 12px;
-
-}
-
-.horizontal-scroll:hover {
-  /* Pause animation on hover */
-  animation-play-state: paused;
-}
-
-.horizontal-scroll:not(:hover) {
-  /* Resume animation when not hovering */
-  animation-play-state: running;
-}
-.noOverflow{
-  overflow: visible;
-}
