--- a/views/dictionary.ejs
+++ b/views/dictionary.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/profileHeader') -%>
+<%- include('partials/dictionaryHeader') -%>
 
   <body>
-    <h1>ASL Dictionary</h1>
+    <h1>Dictionary</h1>
 
     <div class="search-bar">
       <!-- <input type="text" id="searchInput" placeholder="Search..."> -->
