--- a/views/partials/aboutFooter.ejs
+++ b/views/partials/aboutFooter.ejs
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
-    <div class="footer-container">
+    <div class="container-fluid bg-light">
       <div class="layout-container">
         <div class="footer-links">
           <a href="">About Us</a>
@@ -17,11 +17,14 @@
   </div>
 </footer>
 
-<script src="js/study.js" type="text/javascript"></script>
+
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<script src="js/about.js" type="text/javascript"></script>
 </body>
 
 </html>
