--- a/views/partials/learnFooter.ejs
+++ b/views/partials/learnFooter.ejs
@@ -1,14 +1,16 @@
 <footer>
-  <div class="footer-container">
-    <div class="layout-container">
-      <div class="footer-links">
-        <a href="">About Us</a>
-        <a href="">Contact</a>
-        <a href="">Team</a>
-        <a href="">Podcast</a>
-      </div>
-      <div>
-        <span>© Amaury Silverio 2023 All Rights Reserved</span>
+  <div class="container">
+    <div class="footer-container">
+      <div class="layout-container">
+        <div class="footer-links">
+          <a href="">About Us</a>
+          <a href="">Contact</a>
+          <a href="">Team</a>
+          <a href="">Podcast</a>
+        </div>
+        <div class="copyright">
+          <span>© ASL Lingo 2023 All Rights Reserved</span>
+        </div>
       </div>
     </div>
 
