--- a/views/partials/learnHeader.ejs
+++ b/views/partials/learnHeader.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="page-container">
 
 <head>
   <meta charset="UTF-8" />
@@ -43,7 +43,7 @@
               <a class="nav-link liveLink" href="/liveTranslation">Live Translation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dictionary">ASL Dictionary</a>
+              <a class="nav-link" href="/dictionary">Dictionary</a>
             </li>
             <li>
               <div class="dropdown">
