--- a/views/partials/liveTranslationFooter.ejs
+++ b/views/partials/liveTranslationFooter.ejs
@@ -1,19 +1,22 @@
 <footer>
-  <div class="footer-container">
-    <div class="layout-container">
-      <div class="footer-links">
-        <a href="">About Us</a>
-        <a href="">Contact</a>
-        <a href="">Team</a>
-        <a href="">Podcast</a>
-      </div>
-      <div>
-        <span>© Amaury Silverio 2023 All Rights Reserved</span>
+  <div class="container">
+    <div class="footer-container">
+      <div class="layout-container">
+        <div class="footer-links">
+          <a href="">About Us</a>
+          <a href="">Contact</a>
+          <a href="">Team</a>
+          <a href="">Podcast</a>
+        </div>
+        <div class="copyright">
+          <span>© ASL Lingo 2023 All Rights Reserved</span>
+        </div>
       </div>
     </div>
 
   </div>
 </footer>
+
 <script src="js/liveTranslation.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
