--- a/views/partials/profileFooter.ejs
+++ b/views/partials/profileFooter.ejs
@@ -1,31 +1,42 @@
 <footer>
-  <div class="footer-container">
-    <div class="layout-container">
-      <div class="footer-links">
-        <a href="">About Us</a>
-        <a href="">Contact</a>
-        <a href="">Team</a>
-        <a href="">Podcast</a>
-      </div>
-      <div>
-        <span>© Amaury Silverio 2023 All Rights Reserved</span>
+  <div class="container">
+    <div class="footer-container">
+      <div class="layout-container">
+        <div class="footer-links">
+          <a href="">About Us</a>
+          <a href="">Contact</a>
+          <a href="">Team</a>
+          <a href="">Podcast</a>
+        </div>
+        <div>
+          <span>© ASL Lingo 2023 All Rights Reserved</span>
+        </div>
       </div>
     </div>
 
   </div>
 </footer>
 
-<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
-
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 <script src="js/profile.js" type="text/javascript"></script>
+<!-- <script>
+  // Wait for the page to load completely
+  document.addEventListener("DOMContentLoaded", function () {
+    // Initialize the carousel
+    var carousel = new bootstrap.Carousel(document.getElementById("carouselExampleIndicators"), {
+      interval: 2000, // Set the interval for auto-rotation (optional)
+      wrap: true // Enable wrapping of slides (optional)
+    });
+  });
+</script> -->
 </body>
 
 </html>
