--- a/views/partials/profileHeader.ejs
+++ b/views/partials/profileHeader.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="page-container">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,14 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ASL Lingo</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon-32x32.png" />
+  <!-- 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/js/bootstrap.bundle.min.js"></script> -->
+
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+
+
+  <!-- Bootstrap JavaScript -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script> -->
+
+
   <script src="https://kit.fontawesome.com/d74d0e70eb.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/study.css" />
-  <link rel="stylesheet" href="css/dictionary.css" />
+
   <link rel="stylesheet" href="/css/profile.css" />
 </head>
 
@@ -45,7 +57,7 @@
               <a class="nav-link liveLink" href="/liveTranslation">Live Translation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dictionary">ASL Dictionary</a>
+              <a class="nav-link" href="/dictionary">Dictionary</a>
             </li>
             <li>
               <div class="dropdown">
