--- a/views/partials/studyHeader.ejs
+++ b/views/partials/studyHeader.ejs
@@ -7,20 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ASL Lingo</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon-32x32.png" />
-  <!-- <link rel="font" href="/public/fonts/GallaudetRegular.ttf"> -->
+  <script src="https://kit.fontawesome.com/d74d0e70eb.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/liveTranslation.css" />
+  <link rel="stylesheet" href="/css/study.css" />
 </head>
 
 <body>
   <header class="container">
-    <!-- <div class="text-left">
-      <h2><a class="logo" href="/profile">ASL Lingo</a></h2>
-    </div> -->
     <div class="container-fluid bg-light">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="/profile">ASL Lingo</a>
